<resources>
    <string name="app_name">SDK 4.X</string>
    <string name="attribution_view_text">By Taboola</string>
    <string name="lorem_ipsum_short">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla maximus nibh quis ipsum feugiat vulputate vitae et felis. In fringilla, urna eu dignissim volutpat, sem felis hendrerit libero, nec condimentum mi neque iaculis tortor. Praesent eu justo sem. Ut nec congue lorem. Nam feugiat ipsum sapien, ac posuere neque efficitur sit amet. Sed nunc tellus, tempus cursus leo quis, varius porta libero. Donec elementum quis quam id tincidunt.
    </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eros elit, iaculis eu quam a, malesuada ultrices ex. Quisque imperdiet pulvinar risus, sit amet tincidunt dui facilisis et. Ut volutpat odio a nulla aliquet, quis lobortis dolor hendrerit. Aliquam mollis orci vitae risus cursus mollis. Praesent auctor leo quis accumsan ullamcorper. Sed maximus justo non dui venenatis varius. In in fermentum elit. Ut rutrum mi et leo volutpat imperdiet. Pellentesque nec commodo felis, vitae eleifend eros.
       \n\n Ut eleifend suscipit nunc nec lobortis. Nam sed rutrum urna. Nam malesuada egestas lorem vel faucibus. Donec commodo lectus risus, ac vestibulum tortor interdum eu. Morbi a venenatis mi. Praesent pellentesque massa aliquet, iaculis ligula sit amet, consequat mi.
       \n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales placerat tortor, ac congue diam varius eu. Aenean blandit sem in neque euismod, vel fermentum eros aliquet. In tincidunt sagittis libero vel iaculis. Phasellus laoreet urna non ante tincidunt mollis. Nullam justo turpis, condimentum vitae nulla nec, facilisis imperdiet dui. Etiam ac lacus ut ligula lacinia scelerisque. Proin nec nunc dolor.
    </string>
    <string name="divider_circle" translatable="false">•</string>
    <string name="first_text_block">
        <u><b><i>YouTube and Taboola: Defining the Future of Digital Video</i></b></u>\n\nEarly last month, I was asked to head out to Singapore for a one-day conference organized by IAB SEA + India called Tomorrow’s Digital Skills Today.\nI spoke about video creative and production from the psychological, data and research points of view, and although traveling there wasn’t easy (I flew 16 hours each way for a 48 hour stay)—I would definitely say it was worth it.\nAside from enjoying the modern city, delicious foods, and warm weather (not to mention a quick drink at the world famous Marina Bay Sands hotel rooftop), I also had the pleasure to co-present with Karl Duffill, Regional Agency Business Head at Google, who was asked to speak about video creatives as well.\nWhen preparing for this session, we found that although Taboola and Google are two different video platforms that give consumers a different experience, even when watching the same video, many of the video trends and recommendations regarding the video creative are similar: authenticity, keeping the viewer’s attention span in mind, inspiring the audience to take action, and more.\n
              \n  <u><b><i>Authenticity in video drives success.</i></b></u>\n
        YouTube has been identifying some really interesting trends in regards to video formats.\n
People aren’t just watching videos with traditional storylines anymore—they’re spending hours watching gamers just play online games, they’re watching a lot of super short videos, and they’re especially loving live-streamed content.\n
One of the things that these trends have in common is authenticity.\n
        The person recording himself playing a video game did not prepare a script for if he wins or when he loses.\n
    </string>
    <string name="show_explore_more">Show Explore More</string>
    <string name="set_back_button_trigger">Set Back Button Trigger</string>
    <string name="explore_more_loading">Explore More Loading</string>
    <string name="interstitial_loading">Loading Interstitial</string>
    <string name="interstitial_show">Show Interstitial</string>
</resources>